--- a/skin/frontend/enterprise/default/css/styles.css
+++ b/skin/frontend/enterprise/default/css/styles.css
@@ -424,7 +424,11 @@ p.error-msg { border-color:#e9581f; background-color:#fff5f3; color:#d91a00; }
 .data-table tr.last {}
 .data-table tr.last th,
 .data-table tr.last td { border-bottom:1px solid #d9d9d9; }
+.data-table tr:last-child td,
+.data-table tr:last-child th { border-bottom:1px solid #d9d9d9; }
+.data-table tbody tr:nth-child(odd),
 .data-table tr.odd { background-color:#fff; }
+.data-table tbody tr:nth-child(even),
 .data-table tr.even { background-color:#fafafa; }
 .data-table tbody.odd {}
 .data-table tbody.odd td { border-width:0 1px; }
@@ -521,7 +525,7 @@ ul.disc li { padding-left:10px; background:url(../images/bkg_bulletsm.gif) no-re
 .link-cart { font-size:11px; font-weight:bold; color:#c73615; text-decoration:underline; }
 .link-cart:hover { color:#c73615; text-decoration:none; }
 
-.data-table .btn-remove { display:block; margin:0 auto; width:13px; height:12px; font-size:0; line-height:0; background:url(../images/btn_remove.gif) 0 0 no-repeat; text-indent:-999em; overflow:hidden; }
+.data-table .btn-remove { display:block; margin:0 auto; width:13px; height:12px; font-size:0; line-height:0; background:url(../images/btn_remove.gif) 0 0 no-repeat; text-indent:-999em; overflow:hidden; cursor:pointer; }
 .data-table .btn-remove2 {}
 
 .cards-list dt { margin:5px 0 0; }
@@ -1672,7 +1676,7 @@ ul.cms-menu.type-square ul { list-style-type:square; }
 .cart-table tbody td { padding:12px; }
 .cart-table .btn-continue { float:left; background:none; border:none; }
 .cart-table .btn-continue span { background:none; border:none; text-transform:none; color:#444; text-decoration:underline; font-weight:normal; padding:0; }
-.cart-table .btn-update { float:right; }
+.cart-table .btn-update { float:right; margin-left:5px; }
 
 /* Shopping Cart Collateral boxes */
 .cart .cart-collaterals { width:630px; padding:20px 0 10px; }
@@ -1728,12 +1732,12 @@ ul.cms-menu.type-square ul { list-style-type:square; }
 .cart .totals .checkout-types li { margin:0 0 15px; }
 .cart .totals .checkout-types .paypal-or { clear:both; display:block; padding-top:8px; line-height:1.0; font-size:11px; }
 
+.failed-products { border:1px solid #E9581F;   }
+.failed-products .sub-title { background:#FFF5F3 url(../images/icon_error.gif) no-repeat 10px 50%; color:#D91A00; margin:0; padding:10px 10px 10px 30px; border-bottom:1px solid #E9581F; }
+
 /* Empty Cart Add by SKU */
-.cart-empty .widget-sku { display:block; float:right; border-left:1px solid #ddd; padding-left:100px; padding-right:100px; margin:0 0 30px; width:260px; }
-.cart-empty .widget-sku .block .block-title { background:none; border:none; padding:0; margin:0 0 15px; }
-.cart-empty .widget-sku .block .block-title strong { font-size:16px; font-weight:normal; }
-.cart-empty .widget-sku .block .block-content { padding:0; }
-.cart-empty .failed-products { clear:both; border-top:1px solid #cfcfcf; position:relative; margin:40px -20px -21px; }
+
+.cart-empty .failed-products { clear:both; z-index:1; position:relative; margin:40px -20px -21px; }
 
 /* Options Tool Tip */
 .item-options p { font-size:11px; font-weight:bold; text-transform:uppercase; padding:10px 12px 0 12px; }
@@ -2325,9 +2329,46 @@ ul.cms-menu.type-square ul { list-style-type:square; }
 .block-gr-search p.note { margin:0 0 3px; text-align:right; color:#f15c22; }
 
 /* Order By SKU */
-.order-by-sku .widget-sku .block .block-content { padding:0; }
-.order-by-sku .widget-sku .block .block-content table { margin-left:164px; width:462px; }
-.order-by-sku .widget-sku .block .block-content .actions { width:620px; }
+
+.main .block-addbysku .input-box.validation-error,
+.main .block-addbysku .input-box.validation-passed { padding-right:0; background:none; }
+.main .block-addbysku .validation-advice { margin-right:-19px; }
+
+.main .block.block-addbysku .block-content { padding:10px 4px 10px; }
+.block-addbysku .data-table th,
+.block-addbysku .data-table td { padding:6px 4px; }
+.block-addbysku .data-table th:first-child,
+.block-addbysku .data-table td:first-child { padding-left:13px; }
+.sidebar .block-addbysku .actions { padding:0 13px 7px; }
+p.link-widget-sku { padding:5px 0 0; text-align:right; border-top:1px dotted #dadada; }
+.sidebar p.link-widget-sku { padding:5px 13px 0; text-align:right; border-top:1px dotted #dadada; }
+p.link-widget-sku a { color:#999; }
+
+.block-addbysku .actions { text-align:right; margin:15px 0 10px; }
+.block-addbysku .file-upload { float:left; text-align:left; border:1px solid #dadada; padding:10px 17px; background:#F5F5F5 url(../images/bkg_block.gif) repeat-x 0 100%; margin-top:10px; }
+.block-addbysku .file-upload label { display:block; float:none; width:auto; min-width:60px; text-align:left; }
+.block-addbysku .file-upload p { padding:3px 0; }
+.block-addbysku .file-upload .btn-reset { display:inline-block; margin-left:15px; }
+.block-addbysku .file-upload .btn-reset span { margin-left:0; padding:3px 0; background:url(../images/btn_remove.gif) no-repeat scroll 0 50%; padding-left:15px; display:inline-block; cursor:pointer; color:#999; }
+.block-addbysku .file-upload .input-box { display:block; float:none; }
+.block-addbysku .file-upload .note { width:auto; clear:both; padding:2px 0; }
+
+.block-addbysku .data-table {}
+.block-addbysku .data-table td .btn-remove { margin:4px 0 0; float:right; margin-right:-16px; }
+.block-addbysku .data-table td .input-box { float:left; }
+.block-addbysku .data-table td .qty { width:5em!important }
+.block-addbysku .data-table td.last { padding-right:18px; }
+.block-addbysku .data-table tfoot td.last { text-align:right; }
+.block-addbysku .data-table .add-row { cursor:pointer; background:url(../images/bkg_btn-split-item.png) no-repeat 0px 2px; padding-left:11px; font-weight:bold; color:#999; }
+.block-addbysku .data-table .input-box { width:99%; }
+
+.main .block.block-addbysku .data-table .validation-advice { }
+.main .block.block-addbysku .data-table .col-sku { width:auto; }
+
+.main .block.block-addbysku .data-table .col-qty,
+.main .block.block-addbysku .data-table .col-remove { width:13px; }
+.main .block.block-addbysku .data-table .input-text { width:99%; }
+
 /* ======================================================================================= */
 
 .disabled { position:relative; z-index:1; }
